syntax = "proto3";
option go_package = "github.com/dawit_hopes/grpc_micro_service/proto/user;user";

service UserService {
  rpc Get (SingleUserRequest) returns (UserProfileResponse);
  rpc Create (CreateUserRequest) returns (UserProfileResponse);
  rpc Update (UpdateUserRequest) returns (SuccessResponse);
  rpc Delete (SingleUserRequest) returns (SuccessResponse);
}

message SingleUserRequest {
  string id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message SuccessResponse {
  string message = 1;
}

message UserProfileResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}